# MID360-Reliable-Mapper

./: README.md
src/FAST_LIO_ROS2/: CMakeLists.txt
src/FAST_LIO_ROS2/Log/: mat_pre.txt
src/livox_ros_driver2_real/: CMakeLists.txt
src/livox_ros_driver2_real/config/: MID360_config.json
src/uav_slam_sim/: CMakeLists.txt  README.md  package.xml
src/uav_slam_sim/config/: fast_lio_real_mid360.yaml  fast_lio_sim_mid360.yaml  fast_lio_synthetic_mid360.yaml  mid360_bridge.yaml  mid360_points.rviz  mid360_slam_topics.yaml  real_mid360_grid_view.rviz  real_mid360_icp_simple.rviz  real_mid360_mapping_light.rviz  real_mid360_mapping_safe.rviz  real_mid360_pointcloud_view.rviz
src/uav_slam_sim/docs/: archive_mid360_reliable_mapping.md  mid360_fastlio_reproducible_tutorial.md  orin_nano_edge_deployment.md  real_mid360_mapping_workflow.md
src/uav_slam_sim/launch/: mid360_fastlio_8x8.launch.py  mid360_points_view.launch.py  mid360_slam_8x8.launch.py  real_mid360_dual_view.launch.py  real_mid360_fastlio.launch.py  real_mid360_icp_web_view.launch.py  real_mid360_mapping_view.launch.py  real_mid360_web_view.launch.py  synthetic_mid360_fastlio_rviz.launch.py
src/uav_slam_sim/models/iris_mid360_d435i/: model.config  model.sdf
src/uav_slam_sim/models/iris_mid360_d435i_airframe/: model.config  model.sdf
src/uav_slam_sim/models/slam_8x8_field/: model.config  model.sdf
src/uav_slam_sim/scripts/: analyze_mid360_pcd_map.py  analyze_real_mid360_map.sh  capture_mid360_snapshot.py  capture_real_mid360_fastlio_snapshot.sh  check_mid360_mapping_quality.py  check_real_mid360_mapping_quality.sh  compare_mid360_pcd_maps.py  compare_real_mid360_maps.sh  diagnose_real_mid360_fastlio.sh  diagnose_real_mid360_mapping_pipeline.sh  evaluate_mid360_mapping_readiness.py  evaluate_real_mid360_mapping_session.sh  export_mid360_mapping_cloud.py  export_real_mid360_map.sh  package_mid360_edge_release.sh  probe_real_mid360_topics.py  record_real_mid360_mapping_bag.sh  replay_real_mid360_mapping_bag.sh  run_real_mid360_mapping_session.sh  start_fixed_rviz.sh  start_mid360_core_no_rviz.sh  start_mid360_points_view.sh  start_occupancy_marker_only.sh  start_real_mid360_dual_view.sh  start_real_mid360_fastlio_rviz.sh  start_real_mid360_rviz_only.sh  start_recovered_rviz.sh  start_recovered_rviz_gpu.sh  start_safe_rviz.sh  start_synthetic_fastlio_rviz.sh  stop_mid360_slam.sh  summarize_mid360_mapping_session.py  summarize_real_mid360_mapping_session.sh  synthetic_mid360_publisher.py  web_mid360_icp_mapping_viewer.py  web_mid360_mapping_viewer.py
src/uav_slam_sim/src/: fastlio_cloud_mapper_node.cpp  gz_mid360_bridge_node.cpp  livox_custom_frame_aggregator_node.cpp  pointcloud2_stride_filter_node.cpp  pointcloud_occupancy_grid_node.cpp
src/uav_slam_sim/worlds/: mid360_slam_8x8.sdf
