<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uav_slam_sim</name>
  <version>0.1.0</version>
  <description>Standalone 8x8 Gazebo scene for UAV MID360 point cloud SLAM experiments.</description>
  <maintainer email="zxx@todo.todo">zxx</maintainer>
  <license>LGPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>livox_ros_driver2</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>gz_msgs_vendor</depend>
  <depend>gz_transport_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
